kube/saas/application-plain/saas-oil.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tenant-hotel-seoul
  name: saas-oil-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-oil-deployment
  template:
    metadata:
      labels:
        app: saas-oil-deployment
    spec:
      serviceAccountName: saas-oil-service-account
      nodeSelector:
        node-type: application
      containers:
        - name: saas-oil-container
          image: 794187215716.dkr.ecr.ap-northeast-2.amazonaws.com/saas-oil:develop-120a0c71a8052c0a8e596f5744878f7bf2459b86
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: ecr-registry
---
apiVersion: v1
kind: Service
metadata:
  namespace: tenant-hotel-seoul
  name: saas-oil-service
spec:
  selector:
    app: saas-oil-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
